# splunk-saml-shim

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  example.env  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: bandit.yml  build_container.yml  mypy.yml  pylint.yml  pytest.yml  shellcheck.yml
splunk_saml_shim/: __init__.py  __main__.py  utils.py
tests/: test_extract_idp_cert.py  test_splunk_saml_shim.py  test_urlparse.py
