[tool.poetry]
name = "splunk-saml-shim"
version = "0.0.1"
description = ""
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.1"
aiohttp = "^3.8.1"
uvicorn = "^0.18.3"
watchfiles = "^0.16.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[tool.poetry.dependencies.pydantic]
extras = [
    "dotenv",
]
version = "^1.9.1"

[tool.poetry.dev-dependencies]
pylint-pydantic = "^0.1.4"
pytest = "^7.1.2"
pylint = "^2.15.0"
mypy = "^0.971"
black = "^22.6.0"
bandit = "^1.7.4"

[tool.pylint.MASTER]
max-line-length = 200

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "splunk-saml-shim"
description = ""
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
