[tool.poetry]
name = "splunk-saml-shim"
version = "0.0.2"
description = ""
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
aiohttp = "^3.8.1"
uvicorn = "^0.19.0"
watchfiles = "^0.18.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
defusedxml = "^0.7.1"

[tool.poetry.dependencies.pydantic]
extras = [
    "dotenv",
]
version = "^1.9.1"

[tool.poetry.dev-dependencies]
pylint-pydantic = "^0.1.4"
pytest = "^7.2.0"
pylint = "^2.15.4"
mypy = "^0.990"
black = "^22.10.0"
bandit = "^1.7.4"

[tool.pylint.MASTER]
max-line-length = 200
extension-pkg-allow-list = "lxml"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "splunk-saml-shim"
description = ""
license = "MIT"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
